--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,16 +28,16 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 
 dependencies {
-    api 'com.google.android.material:material:1.9.0-beta01'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.5'
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-//    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     testImplementation 'junit:junit:4.13.2'
